// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Execute Azure deployments for ALREADY-PREPARED applications that have existing .azure/plan.md and infrastructure files. This skill runs azd up, azd deploy, terraform apply, and az deployment commands with built-in error recovery. Requires .azure/plan.md from azure-prepare and validated status from azure-validate. WHEN: run azd up, run azd deploy, execute deployment, push to production, push to cloud, go live, ship it, bicep deploy, terraform apply, publish to Azure, launch on Azure.",
  "extractedKeywords": [
    "already-prepared",
    "applications",
    "apply",
    "azure",
    "azure-prepare",
    "azure-validate",
    "bicep",
    "built-in",
    "cli",
    "cloud",
    "commands",
    "deploy",
    "deployment",
    "deployments",
    "error",
    "execute",
    "existing",
    "files",
    "from",
    "have",
    "identity",
    "infrastructure",
    "launch",
    "live",
    "mcp",
    "plan",
    "production",
    "publish",
    "push",
    "recovery",
    "requires",
    "runs",
    "ship",
    "skill",
    "sql",
    "status",
    "terraform",
    "that",
    "this",
    "validated",
    "validation",
    "when",
    "with",
  ],
  "name": "azure-deploy",
}
`;

exports[`azure-deploy - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "already-prepared",
  "applications",
  "apply",
  "azure",
  "azure-prepare",
  "azure-validate",
  "bicep",
  "built-in",
  "cli",
  "cloud",
  "commands",
  "deploy",
  "deployment",
  "deployments",
  "error",
  "execute",
  "existing",
  "files",
  "from",
  "have",
  "identity",
  "infrastructure",
  "launch",
  "live",
  "mcp",
  "plan",
  "production",
  "publish",
  "push",
  "recovery",
  "requires",
  "runs",
  "ship",
  "skill",
  "sql",
  "status",
  "terraform",
  "that",
  "this",
  "validated",
  "validation",
  "when",
  "with",
]
`;
